Fixed linkedin link image looking like trash on safari

--- a/css/nav_bar.css
+++ b/css/nav_bar.css
@@ -22,4 +22,5 @@
 
 .nav_links>a>img {
     height: 48px;
+    width: 48px;
 }
